# roboticHugo

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  get_client_token.py  main.py  pyproject.toml  replied_to_tweets.txt  requirements.txt  robot.py  run.sh
docs/: system.md
old/: get_client_token.py  replied_to_tweets.txt  robot_old_v1.py
scripts/: prompt_tester.py
src/: ai.py  auth.py  authenticate.py  config.py  main.py  twitter_api.py
src/templates/: index.html
tests/: test_ai.py
