[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roboticHugo"
version = "0.1.0"
description = "AI Twitter Bot"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# dependencies = [ ] # @dev Add dependencies here if desired,
# otherwise pip install -r requirements.txt still works.

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in src/ 